[project]
name = "voyolib"
version = "0.0.5"
description = "Python library for Voyo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "aiosqlite>=0.22.1",
    "fastapi>=0.115.0",
    "mcp>=1.0.0",
    "oracledb>=4.0.1",
    "po-docs-db>=0.1.0",
]

[project.scripts]
voyolib-mcp = "voyolibmcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voyo", "voyolibmcp"]
