[project]
name = "voyolib"
version = "0.0.6"
description = "Python library for Voyo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.22.1",
    "fastapi>=0.115.0",
    "mcp>=1.0.0",
    "oracledb>=4.0.1",
    "po-docs-db>=0.1.0",
    "openai>=2.48.0",
    "tiktoken>=0.13.0",
]

[project.scripts]
voyolib-mcp = "voyolibmcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voyo", "voyolibmcp"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
